<resources>
    <string name="app_name">BasicProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test_string">This is a test string</string>
    <string name="headerImageContentDesc">bstack-logo</string>
    <string name="switchButtonText">Switches</string>
    <string name="switchButtonContentDesc">switches-btn-acc-id</string>
    <string name="listButtonText">Lists</string>
    <string name="listButtonContentDesc">list-btn-acc-id</string>
    <string name="dateButtonText">Date Picker</string>
    <string name="dateButtonContentDesc">date-btn-acc-id</string>
    <string name="formButtonText">Form</string>
    <string name="formButtonContentDesc">form-btn-acc-id</string>
    <string name="textFieldButtonText">Text Field</string>
    <string name="textFieldButtonContentDesc">txt-field-btn-acc-id</string>
    <string name="alertButtonText">Alert</string>
    <string name="alertButtonContentDesc">alert-btn-acc-id</string>
    <string name="alertPageText">You are on the Alert page!</string>
    <string name="alertPageTextContentDesc">alert-page-text-acc-id</string>
    <string name="alertPageGoBackButtonText">Go Back</string>
    <string name="alertPageGoBackButtonContentDesc">go-back-btn-acc-id</string>
    <string name="enterTextbuttonText">Submit</string>
    <string name="enterTextButtonContentDesc">enter-text-btn-acc-id</string>
    <string name="enterTextBoxText">Enter text…</string>
    <string name="enterTextBoxContentDesc">enter-text-box-acc-id</string>
    <string name="enteredTextLabelText">Entered Text:</string>
    <string name="enteredTextLabelContentDesc">entered-txt-label-acc-id</string>
    <string name="enterTextHintText">Enter some text</string>
    <string name="textFieldPageGoBackButtonText">Go Back</string>
    <string name="textFieldPageGoBackContentDesc">go-back-btn-acc-id</string>
    <string name="firstNameLabelText">First Name:</string>
    <string name="firstNameLabelContentDesc">first-name-label-acc-id</string>
    <string name="lastNameLabelText">Last Name:</string>
    <string name="lastNameLabelContentDesc">last-name-label-acc-id</string>
    <string name="emailAddressLabelText">Email Address:</string>
    <string name="emailAddressLabelContentDesc">email-add-label-acc-id</string>
    <string name="formSubmitButtonText">Submit</string>
    <string name="formSubmitButtonContentDesc">form-submit-btn-acc-id</string>
    <string name="firstNameFieldText">Enter first name…</string>
    <string name="firstNameFieldContentDesc">first-name-field-acc-id</string>
    <string name="lastNameFormFieldText">Enter last name…</string>
    <string name="lastNameFieldContentDesc">last-name-field-acc-id</string>
    <string name="enterEmailFormFieldText">Enter email</string>
    <string name="enterEmailFieldContentDesc">enter-email-field-acc-id</string>
    <string name="formGoBackButtonText">Go Back</string>
    <string name="formGoBackButtonContentDesc">go-back-btn-acc-id</string>
    <string name="datePageGoBackButtonText">Go Back</string>
    <string name="datePageGoBackButtonContentDesc">go-back-btn-acc-id</string>
    <string name="switchPageGoBackButtonText">Go Back</string>
    <string name="switchPageGoBackButtonContentDesc">go-back-btn-acc-id</string>
    <string name="switchOneText">Off</string>
    <string name="switchThreeText">Off</string>
    <string name="switchTwoText">Off</string>
    <string name="switchFourText">Off</string>
    <string name="switchFiveText">Off</string>
    <string name="switchOneContentDesc">switch-one-acc-id</string>
    <string name="switchTwoContentDesc">switch-two-acc-id</string>
    <string name="switchThreeContentDesc">switch-three-acc-id</string>
    <string name="switchFourContentDesc">switch-four-acc-id</string>
    <string name="switchFiveContentDesc">switch-five-acc-id</string>
    <string name="switchOneTextContentDesc">switch-one-text-acc-id</string>
    <string name="switchTwoTextContentDesc">switch-two-text-acc-id</string>
    <string name="switchThreeTextContentDesc">switch-three-text-acc-id</string>
    <string name="switchFourTextContentDesc">switch-four-text-acc-id</string>
    <string name="switchFiveTextContentDesc">switch-five-text-acc-id</string>
</resources>