...
            android:layout_marginBottom="60dp"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:src="@drawable/sa_training_app" />

        <Button
            android:id="@+id/alertButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:text="Alert" />
...
